check for hash and fix jump link issue

--- a/src/scss/pages/front-page/sections/_about.scss
+++ b/src/scss/pages/front-page/sections/_about.scss
@@ -26,12 +26,6 @@ body.front-page {
             content: url("/wp-content/themes/portfolio-timber-v2/assets/icons/star-regular.svg");
           }
         }
-
-        .wp-block-group__inner-container {
-          // @include mq("md", "min") {
-
-          // }
-        }
       }
     }
   }
